--- a/message.html
+++ b/message.html
@@ -44,6 +44,10 @@
             <a href="/message" class="sidebar-item active">
                 <span class="material-icons-round">mail</span>私信消息
             </a>
+            <a href="/message.html" class="sidebar-item active" id="nav-message-link">
+                <span class="material-icons-round">mail</span>私信消息
+                <span class="sidebar-badge" id="sidebar-unread-dot"></span>
+            </a>
             <a href="/star" class="sidebar-item">
                 <span class="material-icons-round">image</span>美图收藏
             </a>
