--- a/anime/index.html
+++ b/anime/index.html
@@ -5,7 +5,7 @@
 <span class=material-icons-round>dark_mode</span>
 </button>
 <button id=btn-logout class="icon-btn nav-icon-btn" title=退出登录>
-<span class=material-icons-round>logout</span></button></div></nav><script type=text/javascript>document.getElementById("btn-logout").addEventListener("click",async()=>{await client.auth.signOut(),window.location.href="/login/"})</script><div class=sidebar-overlay id=sidebar-overlay></div><aside class=sidebar id=sidebar><div class="sidebar-header mobile-only"><span class=brand-logo>菜单</span>
+<span class=material-icons-round>logout</span></button></div></nav><script type=text/javascript>document.getElementById("btn-logout").addEventListener("click",async()=>{await client.auth.signOut(),window.location.href="/login/?redirect="+window.location.pathname})</script><div class=sidebar-overlay id=sidebar-overlay></div><aside class=sidebar id=sidebar><div class="sidebar-header mobile-only"><span class=brand-logo>菜单</span>
 <button id=close-sidebar class=icon-btn>
 <span class=material-icons-round>close</span></button></div><div class=sidebar-menu><a href=/ class=sidebar-item><span class=material-icons-round>settings</span>账号设置
 </a><a href=/message/ class="sidebar-item active" id=nav-message-link><span class=material-icons-round>mail</span>私信消息
